# RTSoftPractice

Buffer/Buffer with wait queue/DriverIOCTL/: Makefile  SDriver.c  SDriver.ko  SDriver.mod  SDriver.mod.c  modules.order
Buffer/Buffer with wait queue/DriverIOCTL/MyDR/: mydriverio.h
Buffer/Buffer with wait queue/app_for_thr/: Makefile  app0  app0.c
Buffer/Read/: Makefile  app  app.c
Buffer/Write/: Makefile  app1  app1.c
Clsrv/Client1/: CMakeLists.txt  Clientd.c
Clsrv/Client1/buildC/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Clientd-0.1.1-Linux.deb  Makefile  cmake_install.cmake  install_manifest.txt
Clsrv/Client1/buildC/_CPack_Packages/Linux/DEB/Clientd-0.1.1-Linux/: control  md5sums
Clsrv/Client1/buildC/_CPack_Packages/Linux/DEB/Clientd-0.1.1-Linux/home/: Clientd
Clsrv/Server1/: CMakeLists.txt  Serverd.c
Clsrv/Server1/buildS/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  Serverd-0.1.1-Linux.deb  cmake_install.cmake  install_manifest.txt
Clsrv/Server1/buildS/_CPack_Packages/Linux/DEB/Serverd-0.1.1-Linux/: control  md5sums
Clsrv/Server1/buildS/_CPack_Packages/Linux/DEB/Serverd-0.1.1-Linux/home/: Serverd
DriverforBuff/: DriveS.c  DriveS.ko  DriveS.mod  DriveS.mod.c  Makefile
Mac-Address/PCI_dr/: Makefile  PCI_dri.c  PCI_dri.ko  PCI_dri.mod  PCI_dri.mod.c  modules.order
Mac-Address/PCI_dr/MyPCIDR/: mypcidriverio.h
